# BEJ-decoder

./: .gitignore  CMakeLists.txt  README.md
include/: bej_dec.h
src/: bej_dec.c  main.c
test/: CMakeLists.txt  bej_dec_test.cpp
